[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Piece.tscn" type="PackedScene" id=2]

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="Piece1" parent="." instance=ExtResource( 2 )]

[node name="Piece2" parent="." instance=ExtResource( 2 )]

[node name="Piece3" parent="." instance=ExtResource( 2 )]

[node name="Piece4" parent="." instance=ExtResource( 2 )]
